--- a/k8s/database-setup.yml
+++ b/k8s/database-setup.yml
@@ -17,27 +17,27 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: tb-db-setup
-  namespace: thingsboard
+  name: navity-db-setup
+  namespace: navity
 spec:
   volumes:
-  - name: tb-node-config
+  - name: navity-node-config
     configMap:
-      name: tb-node-config
+      name: navity-node-config
       items:
       - key: conf
         path: thingsboard.conf
       - key: logback
         path: logback.xml
   containers:
-  - name: tb-db-setup
+  - name: navity-db-setup
     imagePullPolicy: Always
-    image: thingsboard/tb-node:latest
+    image: navity/navity-node:latest
     envFrom:
     - configMapRef:
-        name: tb-node-db-config
+        name: navity-node-db-config
     volumeMounts:
       - mountPath: /config
-        name: tb-node-config
+        name: navity-node-config
     command: ['sh', '-c', 'while [ ! -f /install-finished ]; do sleep 2; done;']
   restartPolicy: Never
