--- a/common/transport/transport-api/pom.xml
+++ b/common/transport/transport-api/pom.xml
@@ -19,11 +19,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.thingsboard.common</groupId>
-        <version>2.4.1-SNAPSHOT</version>
+        <groupId>net.navity.common</groupId>
+        <version>1.1.0-SNAPSHOT</version>
         <artifactId>transport</artifactId>
     </parent>
-    <groupId>org.thingsboard.common.transport</groupId>
+    <groupId>net.navity.common.transport</groupId>
     <artifactId>transport-api</artifactId>
     <packaging>jar</packaging>
 
@@ -37,15 +37,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.thingsboard.common</groupId>
+            <groupId>net.navity.common</groupId>
             <artifactId>data</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.thingsboard.common</groupId>
+            <groupId>net.navity.common</groupId>
             <artifactId>message</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.thingsboard.common</groupId>
+            <groupId>net.navity.common</groupId>
             <artifactId>queue</artifactId>
         </dependency>
         <dependency>
