--- a/k8s/cassandra.yml
+++ b/k8s/cassandra.yml
@@ -18,7 +18,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: fast
-  namespace: thingsboard
+  namespace: navity
 provisioner: k8s.io/minikube-hostpath
 parameters:
   type: pd-ssd
@@ -27,7 +27,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cassandra-probe-config
-  namespace: thingsboard
+  namespace: navity
   labels:
     name: cassandra-probe-config
 data:
@@ -48,7 +48,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: cassandra
-  namespace: thingsboard
+  namespace: navity
   labels:
     app: cassandra
 spec:
@@ -112,11 +112,11 @@ spec:
           - name: HEAP_NEWSIZE
             value: 256M
           - name: CASSANDRA_CLUSTER_NAME
-            value: "Thingsboard Cluster"
+            value: "Navity Cluster"
           - name: CASSANDRA_DC
-            value: "DC1-Thingsboard-Cluster"
+            value: "DC1-Navity-Cluster"
           - name: CASSANDRA_RACK
-            value: "Rack-Thingsboard-Cluster"
+            value: "Rack-Navity-Cluster"
           - name: CASSANDRA_AUTO_BOOTSTRAP
             value: "false"
           - name: CASSANDRA_ENDPOINT_SNITCH
@@ -154,7 +154,7 @@ metadata:
   labels:
     app: cassandra
   name: cassandra
-  namespace: thingsboard
+  namespace: navity
 spec:
   clusterIP: None
   ports:
