--- a/k8s/navity-coap-transport-configmap.yml
+++ b/k8s/navity-coap-transport-configmap.yml
@@ -17,10 +17,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: tb-coap-transport-config
-  namespace: thingsboard
+  name: navity-coap-transport-config
+  namespace: navity
   labels:
-    name: tb-coap-transport-config
+    name: navity-coap-transport-config
 data:
   conf: |
       export JAVA_OPTS="$JAVA_OPTS -Xloggc:/var/log/tb-coap-transport/${TB_HOST}/gc.log -XX:+IgnoreUnrecognizedVMOptions -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/var/log/tb-coap-transport/${TB_HOST}/heapdump.bin -XX:+PrintGCDetails -XX:+PrintGCDateStamps"
@@ -28,18 +28,18 @@ data:
       export JAVA_OPTS="$JAVA_OPTS -XX:GCLogFileSize=10M -XX:-UseBiasedLocking -XX:+UseTLAB -XX:+ResizeTLAB -XX:+PerfDisableSharedMem -XX:+UseCondCardMark"
       export JAVA_OPTS="$JAVA_OPTS -XX:CMSWaitDuration=10000 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+CMSParallelInitialMarkEnabled"
       export JAVA_OPTS="$JAVA_OPTS -XX:+CMSEdenChunksRecordAlways -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+ExitOnOutOfMemoryError"
-      export LOG_FILENAME=tb-coap-transport.out
-      export LOADER_PATH=/usr/share/tb-coap-transport/conf
+      export LOG_FILENAME=navity-coap-transport.out
+      export LOADER_PATH=/usr/share/navity-coap-transport/conf
   logback: |
       <!DOCTYPE configuration>
       <configuration scan="true" scanPeriod="10 seconds">
 
           <appender name="fileLogAppender"
                     class="ch.qos.logback.core.rolling.RollingFileAppender">
-              <file>/var/log/tb-coap-transport/${TB_HOST}/tb-coap-transport.log</file>
+              <file>/var/log/navity-coap-transport/${TB_HOST}/navity-coap-transport.log</file>
               <rollingPolicy
                       class="ch.qos.logback.core.rolling.SizeAndTimeBasedRollingPolicy">
-                  <fileNamePattern>/var/log/tb-coap-transport/${TB_HOST}/tb-coap-transport.%d{yyyy-MM-dd}.%i.log</fileNamePattern>
+                  <fileNamePattern>/var/log/navity-coap-transport/${TB_HOST}/navity-coap-transport.%d{yyyy-MM-dd}.%i.log</fileNamePattern>
                   <maxFileSize>100MB</maxFileSize>
                   <maxHistory>30</maxHistory>
                   <totalSizeCap>3GB</totalSizeCap>
