--- a/msa/transport/coap/pom.xml
+++ b/msa/transport/coap/pom.xml
@@ -19,17 +19,17 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.thingsboard.msa</groupId>
-        <version>2.4.1-SNAPSHOT</version>
+        <groupId>net.navity.msa</groupId>
+        <version>1.1.0-SNAPSHOT</version>
         <artifactId>transport</artifactId>
     </parent>
-    <groupId>org.thingsboard.msa.transport</groupId>
+    <groupId>net.navity.msa.transport</groupId>
     <artifactId>coap</artifactId>
     <packaging>pom</packaging>
 
-    <name>ThingsBoard COAP Transport Microservice</name>
-    <url>https://thingsboard.io</url>
-    <description>ThingsBoard COAP Transport Microservice</description>
+    <name>Navity COAP Transport Microservice</name>
+    <url>https://navity.net</url>
+    <description>Navity COAP Transport Microservice</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -43,7 +43,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.thingsboard.transport</groupId>
+            <groupId>net.navity.transport</groupId>
             <artifactId>coap</artifactId>
             <version>${project.version}</version>
             <classifier>deb</classifier>
@@ -67,7 +67,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.thingsboard.transport</groupId>
+                                    <groupId>net.navity.transport</groupId>
                                     <artifactId>coap</artifactId>
                                     <classifier>deb</classifier>
                                     <type>deb</type>
