--- a/rule-engine/rule-engine-api/pom.xml
+++ b/rule-engine/rule-engine-api/pom.xml
@@ -21,16 +21,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.thingsboard</groupId>
-        <version>2.4.1-SNAPSHOT</version>
+        <groupId>net.navity</groupId>
+        <version>1.1.0-SNAPSHOT</version>
         <artifactId>rule-engine</artifactId>
     </parent>
-    <groupId>org.thingsboard.rule-engine</groupId>
+    <groupId>net.navity.rule-engine</groupId>
     <artifactId>rule-engine-api</artifactId>
     <packaging>jar</packaging>
 
-    <name>Thingsboard Rule Engine API</name>
-    <url>https://thingsboard.io</url>
+    <name>Navity Rule Engine API</name>
+    <url>https://navity.net</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,12 +39,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.thingsboard.common</groupId>
+            <groupId>net.navity.common</groupId>
             <artifactId>message</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.thingsboard</groupId>
+            <groupId>net.navity</groupId>
             <artifactId>dao</artifactId>
             <scope>provided</scope>
         </dependency>
