--- a/transport/pom.xml
+++ b/transport/pom.xml
@@ -19,15 +19,15 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.thingsboard</groupId>
-        <version>2.4.1-SNAPSHOT</version>
-        <artifactId>thingsboard</artifactId>
+        <groupId>net.navity</groupId>
+        <artifactId>navity</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>transport</artifactId>
     <packaging>pom</packaging>
 
-    <name>Thingsboard Server Transport Modules</name>
-    <url>https://thingsboard.io</url>
+    <name>Navity Server Transport Modules</name>
+    <url>https://navity.net</url>
 
     <properties>
         <main.dir>${basedir}/..</main.dir>
